--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'org.greenrobot:greendao:3.2.2'
+
+    // Retrofit
+    api "com.squareup.retrofit2:retrofit:2.3.0"
+    api "com.squareup.retrofit2:converter-gson:2.3.0"
+    api "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+
+    api "com.squareup.okhttp3:logging-interceptor:3.10.0"
 }
