--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,12 +25,12 @@
             </intent-filter>
         </activity>
 
-        <!--<meta-data
-            android:name="design_height_in_dp"
+        <meta-data
+            android:name="design_height_in_px"
             android:value="1920" />
         <meta-data
-            android:name="design_width_in_dp"
-            android:value="1080" />-->
+            android:name="design_width_in_px"
+            android:value="1080" />
     </application>
 
 </manifest>
